<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    tools:context=".SimularPlazoFijoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/logo_utn_description"
                android:src="@drawable/utnsantafe" />

            <TextView
                android:id="@+id/app_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_tittle"
                android:textAlignment="textEnd"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/tasa_nominal_anual"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/tasaNominalField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/float_value"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tasaEfectivaAnual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/tasa_efectiva_anual"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/tasaEfectivaField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/float_value"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/capitalInvertir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/capital_a_invertir"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/tasaNominalField3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/float_value"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:max="12"
            android:progress="1" />

        <TextView
            android:id="@+id/diasPlazoFijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/con_renovaci_n_autom_tica" />

        <TextView
            android:id="@+id/tituloResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simulador_plazo_fijo"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/plazoResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/plazo" />

        <TextView
            android:id="@+id/capitalResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/capital" />

        <TextView
            android:id="@+id/interesesResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/intereses_ganados" />

        <TextView
            android:id="@+id/montoTotalResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/monto_total" />

        <TextView
            android:id="@+id/montoAnualResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/monto_total_anual" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/confirmar"
            app:cornerRadius="10dp" />
    </LinearLayout>

</LinearLayout>