<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    tools:context=".ConstituirPlazoFijoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/logo_utn_description"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/app_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/app_tittle"
                android:textAlignment="textEnd"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="10dp"
            android:text="@string/solicitud_datos"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/nombre"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/nombre"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textCapWords"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/apellido"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/apellido"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textCapWords"
                android:minHeight="48dp"
                android:singleLine="false"
                android:textAlignment="viewStart"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/moneda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/moneda"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:entries="@array/arreglo_monedas" />
        </LinearLayout>

        <Button
            android:id="@+id/simularButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/simular"
            app:cornerRadius="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center|end"
        android:orientation="vertical">

        <Button
            android:id="@+id/constituirButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:text="@string/constituir"
            app:cornerRadius="10dp" />
    </LinearLayout>

</LinearLayout>